--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NaturZen - Salud y Bienestar Natural</title>
-  <link rel="stylesheet" href="styles.css"/>
+
+  <!-- ✅ Fuente moderna desde Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet" />
+
+  <!-- ✅ Tu hoja de estilos existente -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
