Texto inicio y texto de recomendaciones
he añadido los textos de inicio y recomendaciones espero que sea vea mejor sino tendré que cambiarlo otra vez

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NaturZen - Salud y Bienestar Natural</title>
 
-  <!-- ✅ Fuente moderna desde Google Fonts -->
+  <!-- Fuente moderna desde Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet" />
 
-  <!-- ✅ Tu hoja de estilos existente -->
+  <!-- Hoja de estilos -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -24,21 +24,57 @@
   </header>
 
   <section id="inicio">
-    <h2>Bienvenido a NaturZen</h2>
-    <p>Explora el poder de la naturaleza para mejorar tu salud. Aquí encontrarás remedios caseros, consejos de bienestar y productos recomendados para una vida más natural.</p>
+    <h2>Bienvenido a Vida Natural y Recomendaciones</h2>
+    <p>Tu espacio de bienestar natural y soluciones prácticas para el día a día</p>
+    <p>En un mundo cada vez más acelerado, cuidar de nuestra salud y bienestar se vuelve más importante que nunca. Por eso nace este blog: un lugar pensado para ofrecerte información clara, confiable y accesible sobre remedios caseros, consejos de salud natural y recomendaciones que pueden mejorar tu vida cotidiana.</p>
+    <p>Aquí encontrarás artículos basados en conocimientos tradicionales y hábitos saludables, con enfoques naturales para aliviar molestias comunes, fortalecer el cuerpo y fomentar un estilo de vida más equilibrado. Desde recetas caseras para aliviar la tos, hasta infusiones que ayudan a conciliar el sueño, nuestro objetivo es acompañarte con soluciones sencillas y efectivas.</p>
+    <p>Además, en algunas publicaciones recomendamos productos que complementan los temas tratados, seleccionados cuidadosamente por su utilidad, calidad y buenas valoraciones. Queremos ayudarte a encontrar lo que necesitas de forma práctica y segura.</p>
+    <p>Te invitamos a explorar, aprender y disfrutar de este espacio hecho para ti. Bienvenido a Vida Natural y Recomendaciones: donde lo natural es lo esencial.</p>
   </section>
 
   <section id="blog">
-    <h2>Últimos artículos</h2>
+    <h2>📝 BLOG | Remedios Caseros Naturales</h2>
+
     <article>
-      <h3>🌿 5 infusiones para mejorar la digestión</h3>
-      <p>Descubre cómo el jengibre, la manzanilla y otras hierbas pueden ayudarte a sentirte mejor de forma natural.</p>
-      <a href="#">Leer más</a>
+      <h3>🌿 1. Infusión de jengibre, miel y limón: el clásico que nunca falla</h3>
+      <p>El jengibre, la miel y el limón forman uno de los remedios caseros más populares y efectivos, especialmente durante las épocas frías del año. Esta combinación milenaria no solo es reconfortante, sino que está cargada de propiedades terapéuticas que ayudan a aliviar síntomas del resfriado, fortalecer el sistema inmunológico y mejorar la digestión.</p>
+
+      <h4>¿Por qué funciona?</h4>
+      <p>El jengibre es un potente antiinflamatorio natural. Contiene gingerol, un compuesto bioactivo que ayuda a reducir dolores de garganta, náuseas y congestión.</p>
+      <p>La miel, además de endulzar de forma natural, tiene propiedades antimicrobianas y es un excelente calmante para la garganta irritada.</p>
+      <p>El limón aporta una buena dosis de vitamina C, antioxidantes y refuerza las defensas del organismo.</p>
+
+      <h4>Cómo prepararla:</h4>
+      <p>Hierve una taza de agua y añade unas rodajas finas de jengibre fresco. Deja hervir a fuego bajo durante 10 minutos. Retira del fuego, añade el jugo de medio limón y una cucharada de miel pura. Bébela tibia, especialmente antes de dormir o al despertar.</p>
+      <p><strong>Consejo moderno:</strong> Puedes preparar esta infusión como base para una bebida fría. Déjala enfriar, añade hielo y un poco de agua con gas para crear una versión detox refrescante perfecta para el verano.</p>
     </article>
+
     <article>
-      <h3>🍯 Miel y limón: remedio clásico para la garganta</h3>
-      <p>Una combinación simple pero poderosa para aliviar molestias. Te explicamos cómo prepararlo correctamente.</p>
-      <a href="#">Leer más</a>
+      <h3>🍃 2. Mascarilla facial de avena, miel y yogur para piel sensible</h3>
+      <p>Cuidar la piel de forma natural es cada vez más importante en una era donde los productos industriales a menudo están cargados de químicos. Esta mascarilla casera es ideal para calmar irritaciones, hidratar en profundidad y dejar la piel suave y luminosa.</p>
+
+      <h4>Beneficios de los ingredientes:</h4>
+      <p>La avena coloidal actúa como un calmante natural, reduce el enrojecimiento y alivia picores.</p>
+      <p>La miel, nuevamente, es un antibacteriano natural que ayuda a limpiar los poros y prevenir imperfecciones.</p>
+      <p>El yogur natural contiene ácido láctico que exfolia suavemente la piel y favorece la renovación celular.</p>
+
+      <h4>Preparación:</h4>
+      <p>Mezcla 2 cucharadas de avena molida con 1 cucharada de miel y 2 cucharadas de yogur natural. Aplica la mezcla sobre el rostro limpio, evitando el contorno de ojos. Deja actuar durante 15-20 minutos y enjuaga con agua tibia.</p>
+      <p><strong>Tip extra:</strong> Puedes añadir unas gotas de aceite esencial de lavanda para potenciar su efecto relajante y convertir tu rutina facial en un ritual de bienestar.</p>
+    </article>
+
+    <article>
+      <h3>🌱 3. Baño de pies con sales y romero para relajar y revitalizar</h3>
+      <p>Después de un largo día, no hay nada más reconfortante que un baño de pies bien hecho. Este remedio casero es ideal para relajar los músculos, estimular la circulación y descongestionar los pies hinchados o cansados.</p>
+
+      <h4>Propiedades clave:</h4>
+      <p>Las sales de Epsom son ricas en magnesio, un mineral esencial que ayuda a relajar los músculos y aliviar dolores.</p>
+      <p>El romero, usado tradicionalmente en medicina natural, tiene propiedades antiinflamatorias, estimula la circulación y deja un aroma fresco y estimulante.</p>
+      <p>Unas gotas de aceite esencial de menta añaden un efecto refrescante ideal para revitalizar los pies.</p>
+
+      <h4>Cómo hacerlo:</h4>
+      <p>Llena un barreño con agua caliente (pero no hirviendo). Añade media taza de sales de Epsom, un puñado de hojas frescas o secas de romero (o una infusión concentrada) y 5-6 gotas de aceite de menta. Remoja los pies durante 20 minutos mientras te relajas. Al terminar, sécalos bien y aplica una crema nutritiva.</p>
+      <p><strong>Consejo práctico:</strong> Puedes aprovechar este momento para exfoliar con una piedra pómez y terminar con un masaje con aceite de almendras. El autocuidado también empieza por los pies.</p>
     </article>
   </section>
 
