--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
   <!-- Hoja de estilos -->
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3WSMP8TKM7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3WSMP8TKM7');
+  </script>
 </head>
 <body>
   <header>
