--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-3WSMP8TKM7');
   </script>
 </head>
@@ -27,7 +26,7 @@
     <p>Tu espacio para descubrir remedios naturales y bienestar consciente</p>
     <nav>
       <a href="#inicio">Inicio</a>
-      <a href="#blog">Blog</a>
+      <a href="blog.html">Blog</a>
       <a href="#recomendaciones">Recomendaciones</a>
       <a href="#contacto">Contacto</a>
     </nav>
@@ -42,51 +41,9 @@
     <p>Te invitamos a explorar, aprender y disfrutar de este espacio hecho para ti. Bienvenido a Vida Natural y Recomendaciones: donde lo natural es lo esencial.</p>
   </section>
 
-  <section id="blog">
-    <h2>📝 BLOG | Remedios Caseros Naturales</h2>
-
-    <article>
-      <h3>🌿 1. Infusión de jengibre, miel y limón: el clásico que nunca falla</h3>
-      <p>El jengibre, la miel y el limón forman uno de los remedios caseros más populares y efectivos, especialmente durante las épocas frías del año. Esta combinación milenaria no solo es reconfortante, sino que está cargada de propiedades terapéuticas que ayudan a aliviar síntomas del resfriado, fortalecer el sistema inmunológico y mejorar la digestión.</p>
-
-      <h4>¿Por qué funciona?</h4>
-      <p>El jengibre es un potente antiinflamatorio natural. Contiene gingerol, un compuesto bioactivo que ayuda a reducir dolores de garganta, náuseas y congestión.</p>
-      <p>La miel, además de endulzar de forma natural, tiene propiedades antimicrobianas y es un excelente calmante para la garganta irritada.</p>
-      <p>El limón aporta una buena dosis de vitamina C, antioxidantes y refuerza las defensas del organismo.</p>
-
-      <h4>Cómo prepararla:</h4>
-      <p>Hierve una taza de agua y añade unas rodajas finas de jengibre fresco. Deja hervir a fuego bajo durante 10 minutos. Retira del fuego, añade el jugo de medio limón y una cucharada de miel pura. Bébela tibia, especialmente antes de dormir o al despertar.</p>
-      <p><strong>Consejo moderno:</strong> Puedes preparar esta infusión como base para una bebida fría. Déjala enfriar, añade hielo y un poco de agua con gas para crear una versión detox refrescante perfecta para el verano.</p>
-    </article>
-
-    <article>
-      <h3>🍃 2. Mascarilla facial de avena, miel y yogur para piel sensible</h3>
-      <p>Cuidar la piel de forma natural es cada vez más importante en una era donde los productos industriales a menudo están cargados de químicos. Esta mascarilla casera es ideal para calmar irritaciones, hidratar en profundidad y dejar la piel suave y luminosa.</p>
-
-      <h4>Beneficios de los ingredientes:</h4>
-      <p>La avena coloidal actúa como un calmante natural, reduce el enrojecimiento y alivia picores.</p>
-      <p>La miel, nuevamente, es un antibacteriano natural que ayuda a limpiar los poros y prevenir imperfecciones.</p>
-      <p>El yogur natural contiene ácido láctico que exfolia suavemente la piel y favorece la renovación celular.</p>
-
-      <h4>Preparación:</h4>
-      <p>Mezcla 2 cucharadas de avena molida con 1 cucharada de miel y 2 cucharadas de yogur natural. Aplica la mezcla sobre el rostro limpio, evitando el contorno de ojos. Deja actuar durante 15-20 minutos y enjuaga con agua tibia.</p>
-      <p><strong>Tip extra:</strong> Puedes añadir unas gotas de aceite esencial de lavanda para potenciar su efecto relajante y convertir tu rutina facial en un ritual de bienestar.</p>
-    </article>
-
-    <article>
-      <h3>🌱 3. Baño de pies con sales y romero para relajar y revitalizar</h3>
-      <p>Después de un largo día, no hay nada más reconfortante que un baño de pies bien hecho. Este remedio casero es ideal para relajar los músculos, estimular la circulación y descongestionar los pies hinchados o cansados.</p>
-
-      <h4>Propiedades clave:</h4>
-      <p>Las sales de Epsom son ricas en magnesio, un mineral esencial que ayuda a relajar los músculos y aliviar dolores.</p>
-      <p>El romero, usado tradicionalmente en medicina natural, tiene propiedades antiinflamatorias, estimula la circulación y deja un aroma fresco y estimulante.</p>
-      <p>Unas gotas de aceite esencial de menta añaden un efecto refrescante ideal para revitalizar los pies.</p>
-
-      <h4>Cómo hacerlo:</h4>
-      <p>Llena un barreño con agua caliente (pero no hirviendo). Añade media taza de sales de Epsom, un puñado de hojas frescas o secas de romero (o una infusión concentrada) y 5-6 gotas de aceite de menta. Remoja los pies durante 20 minutos mientras te relajas. Al terminar, sécalos bien y aplica una crema nutritiva.</p>
-      <p><strong>Consejo práctico:</strong> Puedes aprovechar este momento para exfoliar con una piedra pómez y terminar con un masaje con aceite de almendras. El autocuidado también empieza por los pies.</p>
-    </article>
-  </section>
+<div style="text-align: center; margin-top: 2rem;">
+  <a href="blog.html" class="boton-blog">Leer más en el blog</a>
+</div>
 
   <section id="recomendaciones">
     <h2>📚 Recomendaciones Naturales</h2>
