--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="NaturZen es tu espacio de bienestar natural, con remedios caseros, infusiones, consejos y productos recomendados para mejorar tu salud de forma natural.">
   <title>NaturZen - Salud y Bienestar Natural</title>
+
+  <meta property="og:title" content="NaturZen - Salud y Bienestar Natural" />
+  <meta property="og:description" content="Descubre remedios naturales, infusiones, y consejos para tu bienestar diario." />
+  <meta property="og:image" content="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80" />
+  <meta property="og:url" content="https://juanan8.github.io/NaturZen/" />
+  <meta name="twitter:card" content="summary_large_image" />
+
 
   <!-- Fuente moderna desde Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet" />
@@ -33,10 +41,10 @@
   </header>
 
   <section id="inicio">
-    <h2>Bienvenido a Vida Natural y Recomendaciones</h2>
+    <h2>Remedios Naturales, Infusiones y Consejos para tu Bienestar Diario</h2>
     <p>Tu espacio de bienestar natural y soluciones prácticas para el día a día</p>
     <p>En un mundo cada vez más acelerado, cuidar de nuestra salud y bienestar se vuelve más importante que nunca. Por eso nace este blog: un lugar pensado para ofrecerte información clara, confiable y accesible sobre remedios caseros, consejos de salud natural y recomendaciones que pueden mejorar tu vida cotidiana.</p>
-    <p>Aquí encontrarás artículos basados en conocimientos tradicionales y hábitos saludables, con enfoques naturales para aliviar molestias comunes, fortalecer el cuerpo y fomentar un estilo de vida más equilibrado. Desde recetas caseras para aliviar la tos, hasta infusiones que ayudan a conciliar el sueño, nuestro objetivo es acompañarte con soluciones sencillas y efectivas.</p>
+    <p>Aquí encontrarás <a href="blog.html">artículos sobre salud natural</a> basados en conocimientos tradicionales y hábitos saludables, con enfoques naturales para aliviar molestias comunes, fortalecer el cuerpo y fomentar un estilo de vida más equilibrado. Desde recetas caseras para aliviar la tos, hasta infusiones que ayudan a conciliar el sueño, nuestro objetivo es acompañarte con soluciones sencillas y efectivas.</p>
     <p>Además, en algunas publicaciones recomendamos productos que complementan los temas tratados, seleccionados cuidadosamente por su utilidad, calidad y buenas valoraciones. Queremos ayudarte a encontrar lo que necesitas de forma práctica y segura.</p>
     <p>Te invitamos a explorar, aprender y disfrutar de este espacio hecho para ti. Bienvenido a Vida Natural y Recomendaciones: donde lo natural es lo esencial.</p>
   </section>
@@ -48,12 +56,12 @@
   <section id="recomendaciones">
     <h2>📚 Recomendaciones Naturales</h2>
     <div class="producto">
-      <img src="https://images-na.ssl-images-amazon.com/images/I/51u4M5gF1+L._SX379_BO1,204,203,200_.jpg" alt="Libro remedios naturales" />
+      <img src="https://images-na.ssl-images-amazon.com/images/I/51u4M5gF1+L._SX379_BO1,204,203,200_.jpg" alt="Portada del libro Guía de Remedios Naturales en Amazon" />
       <p><strong>Libro: Guía de Remedios Naturales</strong></p>
       <a href="https://www.amazon.com/dp/TU-CODIGO-AFILIADO" target="_blank">Ver en Amazon</a>
     </div>
     <div class="producto">
-      <img src="https://m.media-amazon.com/images/I/81QpkIctqPL._AC_SL1500_.jpg" alt="Difusor de aceites esenciales" />
+      <img src="https://m.media-amazon.com/images/I/81QpkIctqPL._AC_SL1500_.jpg" alt="Difusor de Aromaterapia para bienestar natural" />
       <p><strong>Difusor de Aromaterapia</strong></p>
       <a href="https://www.amazon.com/dp/TU-CODIGO-AFILIADO" target="_blank">Ver en Amazon</a>
     </div>
