--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     gtag('js', new Date());
     gtag('config', 'G-3WSMP8TKM7');
   </script>
+
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
