--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     gtag('config', 'G-3WSMP8TKM7');
   </script>
 
+  <meta name="google-site-verification" content="4oswRpr051pzyKpWZwVNEmqdkrAJf4trbRpWRGsCkxg" />
+
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
