--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:url" content="https://juanan8.github.io/NaturZen/" />
   <meta name="twitter:card" content="summary_large_image" />
 
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="ad9a6d04-bf6a-4f2a-ae5f-88ccf6543c2b" type="text/javascript" async></script>
 
   <!-- Fuente moderna desde Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet" />
@@ -84,68 +85,5 @@
   <footer>
     <p>&copy; 2025 NaturZen - Todos los derechos reservados.</p>
   </footer>
-
-  <!-- Aviso de cookies estilo NaturZen -->
-<div id="aviso-cookies" style="
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: #e8f5e9;
-  color: #2e7d32;
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  padding: 1rem;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
-">
-  Este sitio utiliza cookies para mejorar tu experiencia. 
-  <button onclick="aceptarCookies()" style="
-    margin-left: 1rem;
-    padding: 0.5rem 1rem;
-    background-color: #66bb6a;
-    border: none;
-    color: white;
-    font-weight: bold;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  " onmouseover="this.style.backgroundColor='#4caf50'" onmouseout="this.style.backgroundColor='#66bb6a'">
-    Aceptar
-  </button>
-</div>
-
-<script>
-// Crear cookie
-function setCookie(nombre, valor, dias) {
-  const d = new Date();
-  d.setTime(d.getTime() + (dias*24*60*60*1000));
-  const expiracion = "expires=" + d.toUTCString();
-  document.cookie = nombre + "=" + valor + ";" + expiracion + ";path=/";
-}
-
-// Leer cookie
-function getCookie(nombre) {
-  const nombreEQ = nombre + "=";
-  const ca = document.cookie.split(';');
-  for (let i = 0; i < ca.length; i++) {
-    let c = ca[i].trim();
-    if (c.indexOf(nombreEQ) === 0) return c.substring(nombreEQ.length);
-  }
-  return null;
-}
-
-// Ocultar aviso si ya se aceptó
-window.onload = function() {
-  if (getCookie("cookies_aceptadas") === "true") {
-    document.getElementById("aviso-cookies").style.display = "none";
-  }
-}
-
-function aceptarCookies() {
-  setCookie("cookies_aceptadas", "true", 365);
-  document.getElementById("aviso-cookies").style.display = "none";
-}
-</script>
 </body>
 </html>
