--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://juanan8.github.io/NaturZen/" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="ad9a6d04-bf6a-4f2a-ae5f-88ccf6543c2b" type="text/javascript" async></script>
+  <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/e480c2bdb5b6e5cf4faaf66dfa66b370.js"></script>
 
   <!-- Fuente moderna desde Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet" />
