--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <meta property="og:url" content="https://juanan8.github.io/NaturZen/" />
   <meta name="twitter:card" content="summary_large_image" />
 
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NFBNRW4M');</script>
+<!-- End Google Tag Manager -->
+  
   <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/e480c2bdb5b6e5cf4faaf66dfa66b370.js"></script>
 
   <!-- Fuente moderna desde Google Fonts -->
@@ -34,6 +42,10 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NFBNRW4M"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <header>
     <h1>NaturZen</h1>
     <p>Tu espacio para descubrir remedios naturales y bienestar consciente</p>
