--- a/blog.html
+++ b/blog.html
@@ -17,17 +17,20 @@
   gtag('config', 'G-3WSMP8TKM7');
 </script>
 
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
     <h1>Blog NaturZen</h1>
     <p>Remedios naturales, bienestar y vida consciente</p>
     <nav>
-      <a href="index.html">Inicio</a>
-      <a href="blog.html">Blog</a>
-      <a href="index.html#recomendaciones">Recomendaciones</a>
-      <a href="index.html#contacto">Contacto</a>
-    </nav>
+  <a href="index.html#inicio">Inicio</a>
+  <a href="blog.html">Blog</a>
+  <a href="index.html#recomendaciones">Recomendaciones</a>
+  <a href="sobre-nosotros.html">Sobre nosotros</a>
+  <a href="index.html#contacto">Contacto</a>
+</nav>
+
   </header>
 
   <section class="blog-container">
