--- a/index.html
+++ b/index.html
@@ -70,19 +70,73 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <a href="blog.html" class="boton-blog">Leer más en el blog</a>
 </div>
 
-  <section id="recomendaciones">
-    <h2>📚 Recomendaciones Naturales</h2>
-    <div class="producto">
-      <img src="https://images-na.ssl-images-amazon.com/images/I/51u4M5gF1+L._SX379_BO1,204,203,200_.jpg" alt="Portada del libro Guía de Remedios Naturales en Amazon" />
-      <p><strong>Libro: Guía de Remedios Naturales</strong></p>
-      <a href="https://www.amazon.com/dp/TU-CODIGO-AFILIADO" target="_blank">Ver en Amazon</a>
-    </div>
-    <div class="producto">
-      <img src="https://m.media-amazon.com/images/I/81QpkIctqPL._AC_SL1500_.jpg" alt="Difusor de Aromaterapia para bienestar natural" />
-      <p><strong>Difusor de Aromaterapia</strong></p>
-      <a href="https://www.amazon.com/dp/TU-CODIGO-AFILIADO" target="_blank">Ver en Amazon</a>
-    </div>
-  </section>
+<section id="recomendaciones">
+  <h2>📚 Recomendaciones Naturales</h2>
+  <p>Productos seleccionados cuidadosamente por su utilidad, calidad y buenas valoraciones. Todos con enlaces de afiliado para ayudarte de forma práctica y segura.</p>
+
+  <!-- 🌙 Para dormir mejor -->
+  <h3>🌙 Para dormir mejor</h3>
+
+<div class="producto">
+  <img src="https://unsplash.com/es/fotos/almohada-de-cama-blanca-en-la-cama-GLEsBXC8tEk?auto=format&fit=crop&w=400&q=80" alt="Infusión para dormir Yogi Tea">
+  <p><strong>Infusión para dormir Yogi Tea</strong><br>Mezcla relajante con valeriana, melisa y manzanilla para un sueño reparador.</p>
+  <a href="https://amzn.to/3Z9ZQuz" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+
+  <div class="producto">
+    <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=400&q=80" alt="Difusor de aceites esenciales">
+    <p><strong>Difusor de aceites esenciales VicTsing</strong><br>Con luz LED y apagado automático para un ambiente relajante.</p>
+    <a href="https://amzn.to/3SCEGBn" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  </div>
+
+  <div class="producto">
+    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Spray de lavanda para almohadas">
+    <p><strong>Spray de lavanda Calm Ease</strong><br>Aromaterapia para inducir la relajación antes de dormir.</p>
+    <a href="https://amzn.to/42ZwDER" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  </div>
+
+  <!-- 💪 Para fortalecer el sistema inmunológico -->
+  <h3>💪 Para fortalecer el sistema inmunológico</h3>
+
+<div class="producto">
+   <img src="https://unsplash.com/es/fotos/almohada-de-cama-blanca-en-la-cama-GLEsBXC8tEk?auto=format&fit=crop&w=400&q=80" alt="Jengibre en polvo ecológico">
+  <p><strong>Jengibre en polvo ecológico</strong><br>Potente antiinflamatorio natural para apoyar tus defensas.</p>
+  <a href="https://amzn.to/4kdOv4o" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+
+<div class="producto">
+   <img src="https://unsplash.com/es/fotos/almohada-de-cama-blanca-en-la-cama-GLEsBXC8tEk?auto=format&fit=crop&w=400&q=80" alt="Miel cruda de romero">
+  <p><strong>Miel cruda de romero</strong><br>Producto natural con propiedades antimicrobianas y energética.</p>
+  <a href="https://amzn.to/4kiyEBF" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+
+<div class="producto">
+  <img src="https://images.unsplash.com/photo-1500286136213-9a40a7ddf7de?auto=format&fit=crop&w=400&q=80" alt="Extracto de equinácea">
+  <p><strong>Extracto de equinácea</strong><br>Refuerza el sistema inmunológico con ingredientes naturales.</p>
+  <a href="https://amzn.to/4kGbmpR" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+
+  <!-- ☀️ Bienestar diario -->
+  <h3>☀️ Bienestar diario</h3>
+
+<div class="producto">
+  <img src="https://images.unsplash.com/photo-1565936674621-0466c1d1e9aa?auto=format&fit=crop&w=400&q=80" alt="Taza para infusiones con filtro">
+  <p><strong>Taza para infusiones con filtro</strong><br>Ideal para preparar tus infusiones favoritas de forma sencilla.</p>
+  <a href="https://amzn.to/3Zf3aEn" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+
+  <div class="producto">
+    <img src="https://images.unsplash.com/photo-1512820790803-83ca734da794?auto=format&fit=crop&w=400&q=80" alt="Libro Remedios Naturales">
+    <p><strong>Libro Remedios Naturales</strong><br>Guía práctica para tratamientos caseros y saludables.</p>
+    <a href="https://amzn.to/4kezdfQ" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  </div>
+
+  <div class="producto">
+    <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=400&q=80" alt="Aceite esencial de eucalipto">
+    <p><strong>Aceite esencial de eucalipto puro</strong><br>Para vapores o masajes relajantes.</p>
+    <a href="https://amzn.to/4jTEbih" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  </div>
+</section>
 
  <section id="contacto">
   <h2>📬 Contacto</h2>
