--- a/blog.html
+++ b/blog.html
@@ -96,6 +96,34 @@
     </article>
   </section>
 
+<section id="guia-bienestar">
+  <h2>🌱 Guías completas de salud natural</h2>
+  <p>Artículos detallados para profundizar en temas clave del bienestar natural, elaborados con criterio y enfoque responsable.</p>
+
+  <article class="blog-card">
+    <h3>5 infusiones naturales para mejorar la calidad del sueño</h3>
+    <p>El insomnio y las dificultades para conciliar el sueño son problemas comunes en la vida moderna. Frente a este desafío, muchas personas recurren a opciones naturales como las infusiones herbales, que ofrecen efectos calmantes sin los efectos secundarios de los fármacos tradicionales. A continuación, presentamos cinco de las más utilizadas y valoradas por su acción relajante.</p>
+
+    <h4>1. Valeriana (Valeriana officinalis)</h4>
+    <p>Conocida por sus propiedades sedantes, la raíz de valeriana ha sido utilizada durante siglos para aliviar la ansiedad leve y promover un sueño más profundo. Se recomienda prepararla en infusión y consumirla entre 30 y 60 minutos antes de acostarse.</p>
+
+    <h4>2. Manzanilla (Matricaria chamomilla)</h4>
+    <p>La manzanilla no solo destaca por sus beneficios digestivos, sino también por su efecto tranquilizante. Una taza templada de esta infusión por la noche puede ayudar a reducir la tensión acumulada durante el día.</p>
+
+    <h4>3. Tila (Tilia platyphyllos)</h4>
+    <p>Extraída de las flores del tilo, esta infusión es popular por su capacidad para calmar el sistema nervioso. Es ideal para personas que experimentan insomnio relacionado con el estrés emocional.</p>
+
+    <h4>4. Melisa o toronjil (Melissa officinalis)</h4>
+    <p>La melisa posee un suave efecto ansiolítico, útil en casos de nerviosismo o alteraciones del estado de ánimo. Combinada con otras hierbas como la lavanda o la tila, potencia su acción relajante.</p>
+
+    <h4>5. Lavanda (Lavandula angustifolia)</h4>
+    <p>Además de su uso en aromaterapia, la lavanda puede tomarse en infusión para favorecer la relajación mental y física. Su aroma y sabor delicado la convierten en una excelente opción nocturna.</p>
+
+    <h4>Conclusión</h4>
+    <p>Las infusiones herbales son una alternativa eficaz y natural para mejorar la calidad del sueño. Siempre se recomienda consultar con un profesional de la salud antes de iniciar cualquier tratamiento, especialmente si se combinan con medicación o se padecen trastornos crónicos. Integrar estas plantas en la rutina nocturna puede ser un primer paso hacia un descanso más reparador y saludable.</p>
+  </article>
+</section>
+
   <footer>
     <p>&copy; 2025 NaturZen - Todos los derechos reservados.</p>
   </footer>
