--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h3>🌙 Para dormir mejor</h3>
 
 <div class="producto">
-  <img src="https://unsplash.com/es/fotos/almohada-de-cama-blanca-en-la-cama-GLEsBXC8tEk?auto=format&fit=crop&w=400&q=80" alt="Infusión para dormir Yogi Tea">
+  <img src="https://images.unsplash.com/photo-1557735587-58e316c41219?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   <p><strong>Infusión para dormir Yogi Tea</strong><br>Mezcla relajante con valeriana, melisa y manzanilla para un sueño reparador.</p>
   <a href="https://amzn.to/3Z9ZQuz" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
@@ -90,7 +90,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 
   <div class="producto">
-    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Spray de lavanda para almohadas">
+    <img src="https://plus.unsplash.com/premium_photo-1688045685821-4958c1e28322?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     <p><strong>Spray de lavanda Calm Ease</strong><br>Aromaterapia para inducir la relajación antes de dormir.</p>
     <a href="https://amzn.to/42ZwDER" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
   </div>
@@ -99,19 +99,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h3>💪 Para fortalecer el sistema inmunológico</h3>
 
 <div class="producto">
-   <img src="https://unsplash.com/es/fotos/almohada-de-cama-blanca-en-la-cama-GLEsBXC8tEk?auto=format&fit=crop&w=400&q=80" alt="Jengibre en polvo ecológico">
+   <img src="https://plus.unsplash.com/premium_photo-1675364892892-b0aa1b79b67a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   <p><strong>Jengibre en polvo ecológico</strong><br>Potente antiinflamatorio natural para apoyar tus defensas.</p>
   <a href="https://amzn.to/4kdOv4o" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 
 <div class="producto">
-   <img src="https://unsplash.com/es/fotos/almohada-de-cama-blanca-en-la-cama-GLEsBXC8tEk?auto=format&fit=crop&w=400&q=80" alt="Miel cruda de romero">
+   <img src="https://images.unsplash.com/photo-1665473052284-164335672208?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   <p><strong>Miel cruda de romero</strong><br>Producto natural con propiedades antimicrobianas y energética.</p>
   <a href="https://amzn.to/4kiyEBF" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 
 <div class="producto">
-  <img src="https://images.unsplash.com/photo-1500286136213-9a40a7ddf7de?auto=format&fit=crop&w=400&q=80" alt="Extracto de equinácea">
+  <img src="https://images.unsplash.com/photo-1612120899319-dd0e3edfcf32?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   <p><strong>Extracto de equinácea</strong><br>Refuerza el sistema inmunológico con ingredientes naturales.</p>
   <a href="https://amzn.to/4kGbmpR" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h3>☀️ Bienestar diario</h3>
 
 <div class="producto">
-  <img src="https://images.unsplash.com/photo-1565936674621-0466c1d1e9aa?auto=format&fit=crop&w=400&q=80" alt="Taza para infusiones con filtro">
+  <img src="https://images.unsplash.com/photo-1596343621063-c7a7aaf37aa6?q=80&w=985&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
   <p><strong>Taza para infusiones con filtro</strong><br>Ideal para preparar tus infusiones favoritas de forma sencilla.</p>
   <a href="https://amzn.to/3Zf3aEn" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
@@ -132,7 +132,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 
   <div class="producto">
-    <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=400&q=80" alt="Aceite esencial de eucalipto">
+    <img src="https://images.unsplash.com/photo-1533038590840-1cde6e668a91?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     <p><strong>Aceite esencial de eucalipto puro</strong><br>Para vapores o masajes relajantes.</p>
     <a href="https://amzn.to/4jTEbih" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
   </div>
