--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p>Productos seleccionados cuidadosamente por su utilidad, calidad y buenas valoraciones. Todos con enlaces de afiliado para ayudarte de forma práctica y segura.</p>
 
   <!-- 🌙 Para dormir mejor -->
-  <h3>🌙 Para dormir mejor</h3>
+ <h3 class="subtitulo-recomendacion">🌙 Para dormir mejor</h3>
 
 <div class="producto">
   <img src="https://images.unsplash.com/photo-1557735587-58e316c41219?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
@@ -96,7 +96,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 
   <!-- 💪 Para fortalecer el sistema inmunológico -->
-  <h3>💪 Para fortalecer el sistema inmunológico</h3>
+<h3 class="subtitulo-recomendacion">💪 Para fortalecer el sistema inmunológico</h3>
 
 <div class="producto">
    <img src="https://plus.unsplash.com/premium_photo-1675364892892-b0aa1b79b67a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
@@ -117,7 +117,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
   <!-- ☀️ Bienestar diario -->
-  <h3>☀️ Bienestar diario</h3>
+<h3 class="subtitulo-recomendacion">☀️ Bienestar diario</h3>
 
 <div class="producto">
   <img src="https://images.unsplash.com/photo-1596343621063-c7a7aaf37aa6?q=80&w=985&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
