--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="sobre-nosotros.html">Sobre nosotros</a>
       <a href="#contacto">Contacto</a>
     </nav>
+
+<!-- Ícono de Instagram en esquina inferior derecha del header -->
+<a href="https://www.instagram.com/naturzen.oficial/"
+   target="_blank"
+   rel="noopener noreferrer"
+   class="instagram-link">
+  <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png" alt="Instagram">
+</a>
   </div>
 </header>
 
