--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
- <header>
+<header>
   <div class="contenedor-header">
-    <h1><span class="icono-hoja">🌿</span> NaturZen</h1>
-    <p>Remedios naturales y bienestar consciente para tu día a día</p>
+    
+    <div class="logo-header">
+      <h1><span class="icono-hoja">🌿</span> NaturZen</h1>
+      <p>Remedios naturales y bienestar consciente para tu día a día</p>
+    </div>
 
-    <nav>
+    <nav class="menu-header">
       <a href="#inicio">Inicio</a>
       <a href="blog.html">Blog</a>
       <a href="#recomendaciones">Recomendaciones</a>
@@ -58,13 +61,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="#contacto">Contacto</a>
     </nav>
 
-<!-- Ícono de Instagram en esquina inferior derecha del header -->
-<a href="https://www.instagram.com/naturzen.oficial/"
-   target="_blank"
-   rel="noopener noreferrer"
-   class="instagram-link">
-  <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png" alt="Instagram">
-</a>
+    <div class="redes-header">
+      <a href="https://www.instagram.com/naturzen.oficial/"
+         target="_blank"
+         rel="noopener noreferrer"
+         class="instagram-link">
+        <img src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new.png" alt="Instagram">
+      </a>
+    </div>
+
   </div>
 </header>
 
@@ -127,7 +132,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <a href="https://amzn.to/4kGbmpR" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 
-  <!-- ☀️ Bienestar diario -->
+  <!--☀️ Bienestar diario -->
 <h3 class="subtitulo-recomendacion">☀️ Bienestar diario</h3>
 
 <div class="producto">
