--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -7,33 +7,35 @@
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet" />
 <link rel="icon" href="favicon.ico" type="image/x-icon">
-
- <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NRF2SFV8');</script>
-<!-- End Google Tag Manager -->
-
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRF2SFV8"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+ <header>
+  <div class="contenedor-header">
+    
+    <div class="logo-header">
+      <h1><span class="icono-hoja">🌿</span> NaturZen</h1>
+      <p>Remedios naturales y bienestar consciente para tu día a día</p>
+    </div>
 
-  <header>
-    <h1>NaturZen</h1>
-    <p>Tu espacio para descubrir remedios naturales y bienestar consciente</p>
-    <nav>
-  <a href="index.html#inicio">Inicio</a>
-  <a href="blog.html">Blog</a>
-  <a href="index.html#recomendaciones">Recomendaciones</a>
-  <a href="sobre-nosotros.html">Sobre nosotros</a>
-  <a href="index.html#contacto">Contacto</a>
-</nav>
-  </header>
+    <nav class="menu-header">
+      <a href="index.html#inicio">Inicio</a>
+      <a href="blog.html">Blog</a>
+      <a href="index.html#recomendaciones">Recomendaciones</a>
+      <a href="sobre-nosotros.html">Sobre nosotros</a>
+      <a href="index.html#contacto">Contacto</a>
+    </nav>
+
+    <div class="redes-header">
+      <a href="https://www.instagram.com/naturzen.oficial/"
+         target="_blank"
+         rel="noopener noreferrer"
+         class="instagram-link">
+        <img src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new.png" alt="Instagram">
+      </a>
+    </div>
+
+  </div>
+</header>
 
   <section>
     <h2>Sobre nosotros</h2>
