--- a/blog.html
+++ b/blog.html
@@ -20,18 +20,33 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <header>
-    <h1>Blog NaturZen</h1>
-    <p>Remedios naturales, bienestar y vida consciente</p>
-    <nav>
-  <a href="index.html#inicio">Inicio</a>
-  <a href="blog.html">Blog</a>
-  <a href="index.html#recomendaciones">Recomendaciones</a>
-  <a href="sobre-nosotros.html">Sobre nosotros</a>
-  <a href="index.html#contacto">Contacto</a>
-</nav>
+ <header>
+  <div class="contenedor-header">
+    
+    <div class="logo-header">
+      <h1><span class="icono-hoja">🌿</span> NaturZen</h1>
+      <p>Remedios naturales y bienestar consciente para tu día a día</p>
+    </div>
 
-  </header>
+    <nav class="menu-header">
+      <a href="index.html#inicio">Inicio</a>
+      <a href="blog.html">Blog</a>
+      <a href="index.html#recomendaciones">Recomendaciones</a>
+      <a href="sobre-nosotros.html">Sobre nosotros</a>
+      <a href="index.html#contacto">Contacto</a>
+    </nav>
+
+    <div class="redes-header">
+      <a href="https://www.instagram.com/naturzen.oficial/"
+         target="_blank"
+         rel="noopener noreferrer"
+         class="instagram-link">
+        <img src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new.png" alt="Instagram">
+      </a>
+    </div>
+
+  </div>
+</header>
 
   <section class="blog-container">
     <h2>Artículos completos</h2>
